[tool.poetry]
name = "keras-mlp-introduction"
version = "0.1.0"
description = ""
authors = ["Hicham Guessab <hichamgsb.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
